# puppers

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/model/: ability.rs  item.rs  mod.rs  rune.rs
src/models/: ability.rs  item.rs  queue.rs  role.rs
src/service/: error.rs  util.rs
src/service/ddragon/: champion.rs  error.rs  item.rs  map.rs  mod.rs  patch.rs  rune.rs  summoner.rs
src/services/: auth.rs  error.rs  lcu.rs  mod.rs  util.rs
src/services/ddragon/: champion.rs  item.rs  map.rs  mod.rs  patch.rs  patches.rs  summoner.rs  versions.rs
