[package]
name = "puppy-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1.51"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.81", features = ["derive"] }
serde_json = "1.0.78"
sysinfo = "0.23.13"
thiserror = "1.0.31"
tokio = { version = "1.10.0", features = ["full"] }
 
[dev-dependencies]
lazy_static = "1.4.0"
